src/assets/style/blocks/_onboard.scss
.bn-onboard-modal {
  z-index: 11;

  .bn-onboard-custom.bn-onboard-modal-content {
    width: 100%;
  }

  .bn-onboard-select-wallet-info {
    color: $lightViolet !important;
    font-weight: 700;
    font-size: 16px;

    @media screen and (max-width: $mobile) {
      margin-top: 0.35em;
    }
  }

  a,
  .bn-onboard-select-wallet-info {
    color: $lightViolet !important;
    font: 400 16px $firaSans !important;
    letter-spacing: -0.01rem !important;
    text-decoration: none !important;

    &:hover {
      color: $violet !important;
    }
  }

  @media (min-width: $mobile) {
    //background-color: transparentize($color: $violet, $amount: 0.9) !important;

    .bn-onboard-modal-content {
      width: 85%;
    }
  }

  .bn-onboard-modal-content {
    max-height: calc(100vh - 2.66em);
    font-family: $firaSans;

    @media (max-width: $mobile) {
      height: 100vh !important;
      //height: calc(100vh - 1rem) !important;
      max-height: 100vh !important;
      border-radius: 0 !important;

      /* autoprefixer: off */
      @supports (-webkit-touch-callout: none) {
        //noinspection CssInvalidPropertyValue
        max-height: fill-available;
        //noinspection CssInvalidPropertyValue
        height: fill-available;
      }

      //flex-flow: column;
      //display: flex;
      //justify-content: space-between;
      //padding-bottom: 1rem !important;
      //
      //header.bn-onboard-modal-content-header {
      //  margin: 1rem.25rem;
      //}
      //
      //.bn-onboard-select-info-container {
      //  margin: 0.25rem 0 !important;
      //  padding: 0.75rem.25rem !important;
      //  display: flex;
      //  align-items: center;
      //
      //  span.bn-onboard-select-wallet-info {
      //    margin-top: 0 !important;
      //  }
      //}
      //
      //p.bn-onboard-select-description {
      //  padding: 0 0 1rem;
      //  border-bottom: 0.5px solid $lightViolet;
      //  margin: 0.5rem;
      //  display: block;
      //}
      //
      //p.bn-onboard-select-wallet-definition {
      //  display: block;
      //  margin: 0;
      //  padding: 0.25rem;
      //  transition: all $transition2;
      //}
      .bn-onboard-modal-content-header {
        margin: 1rem 0 !important;
      }
    }
  }

  ul.bn-onboard-modal-select-wallets {
    max-height: 50vh !important;
  }

  .bn-onboard-custom.bn-onboard-select-wallet-definition {
    font-size: 14px;

    span {
      display: block;
      margin: 5px 0;
      font-weight: 600;

      a {
        color: $lightViolet !important;
      }
    }
  }

  .bn-onboard-icon-button {
    border-radius: 8px;
    overflow: hidden;
  }

  .bn-onboard-selected-wallet {
    background-color: transparentize($color: $gray, $amount: 0.95) !important;
    box-shadow: 0 0 0 1.5px $violet !important;

    &:hover {
      box-shadow: 0 0 0 2.5px $lightViolet !important;
    }

    span i {
      font-style: normal;
      text-transform: capitalize;
      text-decoration: none;
    }
  }

  .bn-onboard-prepare-button {
    color: $white !important;
    background-color: $violet;
    border-color: $violet !important;
    border-radius: 0.2rem !important;
    font-size: 0.8rem;
    padding: 0.4rem 0.8rem;
    transition: $transition1;
    transition-property: background-color, border-color;

    &:hover {
      background-color: $lightViolet !important;
      border-color: $lightViolet !important;
    }
  }

  .bn-onboard-prepare-error,
  .bn-onboard-modal-content-header {
    background-color: transparent !important;
  }

  .bn-onboard-dark-mode-background-hover:hover,
  .bn-onboard-dark-mode-background {
    background-color: $violet !important;
  }

  .bn-onboard-modal-content-header {
    height: auto;
    margin-bottom: 2em;
    padding: 0;
  }

  .bn-onboard-modal-content-close {
    top: 1.65em;
    width: 25px;
    height: 25px;

    svg {
      width: 100%;
      height: 100%;
    }
  }

  .bn-onboard-custom.bn-onboard-modal-content-header-icon {
    display: none !important;
    visibility: hidden !important;
  }

  @media screen and (max-width: $mobile) {
    button.bn-onboard-modal.bn-onboard-modal-content {
      margin: 0.25rem 0;
      padding: 0.5rem;
    }

    .bn-onboard-select-wallet-definition {
      margin-top: 0.8em !important;
    }

    .bn-onboard-modal-content {
      padding-bottom: 0;

      header.bn-onboard-custom.bn-onboard-modal-content-header {
        margin: 1rem 0 !important;

        h3 {
          margin: 0 !important;
        }
      }

      .bn-onboard-custom.bn-onboard-select-description {
        margin: 0 0 0.5rem;
        padding: 0 0 0.5rem;
      }

      ul.bn-onboard-custom.bn-onboard-modal-select-wallets {
        height: 100%;
        max-height: calc(100% - 285px - 2rem) !important;
        //max-height: calc(100% - 150px - 1.5rem) !important;
        margin: 0;
        padding: 0;
      }

      .bn-onboard-custom.bn-onboard-select-info-container {
        margin: 0.25rem 0 0.5rem;
        padding: 0.5rem 0 0;
        //margin: 1rem .5rem;
        //padding: 0.75rem .5rem;
        border-top: 0.5px solid $lightViolet;

        span.bn-onboard-select-wallet-info {
          margin-top: 0.4rem;
        }
      }

      .bn-onboard-modal-content-close {
        top: 2rem;
      }

      .bn-onboard-custom.bn-onboard-icon-button {
        margin: 0.25em;
        padding: 0.25em;
      }
    }
  }

  .bn-onboard-dark-mode {
    background-color: lighten($darkViolet, 2) !important;
    box-shadow: $defaultShadow;

    .bn-onboard-prepare-error {
      background-color: transparent !important;
    }

    .bn-onboard-selected-wallet {
      background-color: $accentBg !important;
    }
  }
}

#walletconnect-wrapper .walletconnect-modal__base {
  @media (max-height: $mobile) {
    max-width: 300px;
  }
}

section.bn-onboard-custom.bn-onboard-modal-selected-wallet {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
}

footer.bn-onboard-custom.bn-onboard-modal-selected-wallet-footer {
  justify-content: space-between;
  margin: 0;
  padding: 0;
}

.bn-onboard-custom.bn-onboard-modal-content {
  section.bn-onboard-custom.bn-onboard-modal-content {
    margin: 0 !important;
    padding: 0 !important;
  }

  header.bn-onboard-custom.bn-onboard-modal-content-header {
    margin-top: 0 !important;
    margin-bottom: 0 !important;
  }

  div.bn-onboard-custom.bn-onboard-modal-content-close {
    top: 1rem;
    right: 1rem;
    width: 20px;
    height: 20px;
  }
}

/* autoprefixer: off */
aside.bn-onboard-custom.bn-onboard-modal {
  max-height: 100vh;
  padding: 2vh 2vw;

  /* Avoid Chrome to see Safari hack */
  @supports (-webkit-touch-callout: none) {
    //noinspection CssInvalidPropertyValue
    max-height: fill-available;
  }

  .bn-onboard-custom.bn-onboard-modal-content {
    max-height: 90vh !important;

    /* Avoid Chrome to see Safari hack */
    @supports (-webkit-touch-callout: none) {
      //noinspection CssInvalidPropertyValue
      min-height: fill-available;
    }
  }

  section.bn-onboard-custom.bn-onboard-modal-content {
    overflow: hidden;
  }
}

@media (max-height: $mobile) {
  aside.bn-onboard-custom.bn-onboard-modal {
    padding: 1rem;

    section.bn-onboard-custom.bn-onboard-modal-content {
      display: flex;
      flex-direction: column;
      justify-content: flex-start;
      gap: 0.5rem;
      padding: 1rem;
      border-radius: 8px !important;
      height: fit-content !important;
    }

    header.bn-onboard-custom.bn-onboard-modal-content-header {
      margin: 0 !important;
    }

    button.bn-onboard-custom.bn-onboard-icon-button {
      margin: 0 0 0.25rem !important;
      padding: 0.5rem !important;
    }
  }
}

body.-dark {
  .walletconnect-modal__mobile__toggle a {
    color: #1d2039 !important;
  }
}

